fix: Overlap Popup content and recipes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1227,6 +1227,7 @@ input[type="file"] {
     top: 0;
     background: #181D31;
     display: none;
+    z-index: 1;
 }
 
 .content-popup {
